fix overflow for text within header area

--- a/styles.css
+++ b/styles.css
@@ -87,10 +87,7 @@ header .welcome-section {
     padding-bottom: 15%;
 
 }
-header img {
-    width: 100vw;
-    position: absolute;
-}
+
 header .welcome-section .aboutme {
     display: flex;
     flex-direction: column;
@@ -104,7 +101,6 @@ header .welcome-section .aboutme {
 @media ( max-width: 600px) {
     header .welcome-section .aboutme {
         position: relative;
-        top: 160px;
         font-size: 70%;
     }
 }
